images rename + Mozilla publication requirements

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -22,7 +22,10 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "soundfocusttv@example.com"
+      "id": "soundfocusttv@demko.com",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   }
 }
