--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "SoundFocusTTV",
   "version": "1.1",
-  "description": "Mutes all Twitch tabs except the one you.",
+  "description": "Mutes all Twitch tabs except the one you are currently using.",
   "permissions": ["tabs", "storage"],
   "background": {
     "service_worker": "background.js"
